# bullpipe

./: README
SOURCE/: .gitignore  CMakeLists.txt  Justfile  build.zig  build.zig.zon
SOURCE/broker/: Cargo.toml  rust-toolchain.toml
SOURCE/broker/src/: main.rs
SOURCE/main/: boot.s  kernel.zig  linker.ld  root.zig
SOURCE/node/: Cargo.toml  build.rs  rust-toolchain.toml
SOURCE/node/.cargo/: config.toml
SOURCE/node/src/: bully.rs  led.rs  main.rs  sync.rs  tasks.rs  wire.rs
